--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "fetch": "^1.1.0",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redis": "^4.6.5",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
